[gd_scene load_steps=19 format=3 uid="uid://eyohjxgn8cey"]

[ext_resource type="Script" path="res://scenes/characters/character.gd" id="1_04yj6"]
[ext_resource type="SpriteFrames" uid="uid://dxmx32dcrtfy" path="res://resources/sprite_frames/player/knight.tres" id="2_46u8l"]
[ext_resource type="Shader" path="res://resources/hit_effect.gdshader" id="2_urp78"]
[ext_resource type="Texture2D" uid="uid://bvgrmdovl5rwl" path="res://textures/Weapons/sword_slash.png" id="4_p5dpj"]
[ext_resource type="Texture2D" uid="uid://dw5hofjbx5jgv" path="res://textures/Weapons/Hands/Hands.png" id="5_835y3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2nto4"]
resource_local_to_scene = true
shader = ExtResource("2_urp78")
shader_parameter/hit_opacity = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jbwis"]
radius = 26.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6qhvw"]
radius = 9.0

[sub_resource type="Animation" id="Animation_hm46e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:material:shader_parameter/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/RightHand:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/LeftHand:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/LeftHand:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/LeftHand:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-11, 5)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/RightHand:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 5)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/HitArea/HitBox:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Body/WeaponSlash:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_b6eth"]
resource_name = "attack"
length = 5.0001
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/LeftHand:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(-11, 2), Vector2(-3, 0), Vector2(10, 5), Vector2(-3, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/LeftHand:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 2, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [-0.523599, -0.261799, 1.5708, -0.261799, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/RightHand:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/HitArea/HitBox:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/WeaponSlash:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_os3w6"]
resource_name = "death"
length = 6.0001
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/LeftHand:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(-11, 5), Vector2(-5, 13)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/RightHand:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/LeftHand:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_xocls"]
resource_name = "hit"
length = 2.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:material:shader_parameter/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_g301j"]
resource_name = "idle"
length = 4.0001
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/LeftHand:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(-11, 5), Vector2(-11, 6), Vector2(-11, 7), Vector2(-11, 6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/RightHand:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(10, 5), Vector2(10, 6), Vector2(10, 7), Vector2(10, 6)]
}

[sub_resource type="Animation" id="Animation_uv6cx"]
resource_name = "run"
length = 6.0001
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/LeftHand:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-10, 6), Vector2(-10, 3.5), Vector2(-10, 2.5), Vector2(-10, 4), Vector2(-10, 2.5), Vector2(-10, 3.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/RightHand:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(11, 4), Vector2(11, 2.5), Vector2(11, 3.5), Vector2(11, 6), Vector2(11, 3.5), Vector2(11, 2.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ynqkk"]
_data = {
"RESET": SubResource("Animation_hm46e"),
"attack": SubResource("Animation_b6eth"),
"death": SubResource("Animation_os3w6"),
"hit": SubResource("Animation_xocls"),
"idle": SubResource("Animation_g301j"),
"run": SubResource("Animation_uv6cx")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uftg7"]
bg_color = Color(0, 1, 0, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7jwnk"]
radius = 9.5
height = 31.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_qcmke"]
properties/0/path = NodePath(".:position")
properties/0/spawn = false
properties/0/replication_mode = 1
properties/1/path = NodePath(".:state")
properties/1/spawn = false
properties/1/replication_mode = 1
properties/2/path = NodePath(".:hp")
properties/2/spawn = false
properties/2/replication_mode = 1
properties/3/path = NodePath("Body:scale")
properties/3/spawn = false
properties/3/replication_mode = 1

[node name="Character" type="CharacterBody2D"]
script = ExtResource("1_04yj6")

[node name="Body" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_2nto4")
sprite_frames = ExtResource("2_46u8l")
animation = &"idle"

[node name="LeftHand" type="Sprite2D" parent="Body"]
z_index = 1
texture_filter = 1
position = Vector2(-11, 5)
texture = ExtResource("5_835y3")
vframes = 4
frame = 1
region_enabled = true
region_rect = Rect2(0, 0, 16, 64)

[node name="RightHand" type="Sprite2D" parent="Body"]
z_index = 1
texture_filter = 1
position = Vector2(10, 5)
texture = ExtResource("5_835y3")
vframes = 4
frame = 1
region_enabled = true
region_rect = Rect2(16, 0, 16, 64)

[node name="HitArea" type="Area2D" parent="Body"]

[node name="HitBox" type="CollisionShape2D" parent="Body/HitArea"]
position = Vector2(20.5, -4.5)
shape = SubResource("CircleShape2D_jbwis")
disabled = true

[node name="HurtArea" type="Area2D" parent="Body"]

[node name="HurtBox" type="CollisionShape2D" parent="Body/HurtArea"]
position = Vector2(0, 1)
scale = Vector2(1.04, 1.04)
shape = SubResource("CapsuleShape2D_6qhvw")

[node name="WeaponSlash" type="Sprite2D" parent="Body"]
visible = false
texture_filter = 1
position = Vector2(27.1871, -4)
scale = Vector2(0.186, 0.253)
texture = ExtResource("4_p5dpj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ynqkk")
}
speed_scale = 5.0

[node name="HealthBar" type="ProgressBar" parent="."]
z_index = 2
offset_left = -7.0
offset_top = -19.5
offset_right = 143.0
offset_bottom = 7.5
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_styles/fill = SubResource("StyleBoxFlat_uftg7")
step = 1.0
value = 50.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_7jwnk")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_qcmke")

[connection signal="area_entered" from="Body/HurtArea" to="." method="_on_hurt_area_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
